# use_ncnn_in_android

./: .gitignore  LICENSE  readme.md
ncnn_sdk/src/main/cpp/: CMakeLists.txt  face_verifier.cpp
ncnn_sdk/src/main/java/com/example/ncnnsdk/: FaceVerifier.java
